Rename icon to Notes and re-assign to the project

--- a/EvernoteClone/EvernoteClone.csproj
+++ b/EvernoteClone/EvernoteClone.csproj
@@ -5,11 +5,11 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>icons8-notebook-96.ico</ApplicationIcon>
+    <ApplicationIcon>Notes.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="icons8-notebook-96.ico" />
+    <Content Include="Notes.ico" />
   </ItemGroup>
 
   <ItemGroup>
