Move notes file inside the views folder and then update the icon path in both the notes and login window

--- a/EvernoteClone/EvernoteClone.csproj
+++ b/EvernoteClone/EvernoteClone.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Notes.ico" />
+    <Content Include="View\Notes.ico" />
   </ItemGroup>
 
   <ItemGroup>
