Fix error in opening software (related to path of icon) adding copy if newer in the icon properties

--- a/EvernoteClone/EvernoteClone.csproj
+++ b/EvernoteClone/EvernoteClone.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <Content Include="View\Notes.ico">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
